--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,11 +17,13 @@ kotlin = "2.1.10"
 kotlinxDatetime = "0.6.2"
 kotlinxSerializationJson = "1.8.1"
 ktorClientCore = "3.1.2"
+material3 = "1.3.1"
 materialIconsExtended = "1.7.8"
 multiplatformSettings = "1.3.0"
 
 [libraries]
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
